source/_static/css/style.css
/* general
 * -------
 */

a {
    color: rgb(27, 85, 126);
}

a:hover {
    color: rgb(0, 83, 173);
}

/* sidebar
 * ------
 */

/* The original style uses data:
 * which violates the CSP policy
 */
.wy-body-for-nav {
    background-image: none !important;
}

.wy-side-scroll {
    position: relative;
    overflow-x: hidden;
    overflow-y: scroll;
    height: 100%;
}

.wy-nav-top i {
    font-size: 17.3333px;
    margin-top: 15px;
    margin-left: 15px;
}

.wy-menu-vertical {
    width: 290px;
}

.wy-menu-vertical header, .wy-menu-vertical p.caption {
    font-size: inherit;
}

.wy-menu-vertical a {
    font-size: inherit;
}

.wy-menu-vertical a:hover,
.wy-menu-vertical a:focus {
    color: #FFFFFF;
}

.wy-side-nav-search > a {
  font-size: 120%;
}

.wy-side-nav-search > a:hover {
    color: #FFFFFF;
}

/* content
 * -------
 */

.card {
    margin-bottom: .5rem;
}

.wy-nav-content {
    max-width: unset;
}

.rst-content code, .rst-content .important {
    all: unset;
}

.rst-content :not(pre) > code {
    padding: 2px 4px;
    font-size: 90%;
    color: #c7254e;
    background-color: #f9f2f4;
    border-radius: 4px;
}

.btn.btn-default {
    color: #333;
}

.breadcrumb {
    background-color: #e3f2fd;
}

.wy-side-nav-search {
    color: initial;
    background-color: rgb(29, 91, 134);
}

pre[class*="language-"] {
    border: 0;
    border-radius: 4px;
}

pre {
    border: 0;
}

.btn:active {
    padding: 6px 12px;
}

footer {
    color: rgb(85, 85, 85);
}

